--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "segundaentrega",
   "version": "1.0.0",
   "description": "",
@@ -12,7 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "mongoose": "^8.0.3",
+    "mongoose": "^8.1.1",
+    "mongoose-paginate-v2": "^1.8.0",
     "socket.io": "^4.7.3"
   }
 }
