--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express-handlebars": "^7.1.2",
     "mongoose": "^8.1.1",
     "mongoose-paginate-v2": "^1.8.0",
+    "moongose": "^1.0.0",
+    "paginate": "^0.2.0",
     "socket.io": "^4.7.3"
   }
 }
